fixed the problem with boostrap forms and sticky navbar which caused to overlap the content, I fixed it with z-index in css

--- a/static/pages/navbar.css
+++ b/static/pages/navbar.css
@@ -3,8 +3,11 @@
     position:sticky;
     top:0;
     background-color:  rgb(45, 46, 48);
+    z-index: 9999;
 
 }
+
+
 
 @media screen and (max-width:950px) {
     
@@ -64,7 +67,7 @@
 
 	    float:center;
 	    text-align:center;
-	    overflow:hidden;
+	    overflow:auto;
 	    padding: 1% 10px 10px 5px;
           
         }
